project struct update

--- a/application/frontend/view/index/hello.html
+++ b/application/frontend/view/index/hello.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>frontend</title>
 </head>
 <body>
-<h1>Index Demo.html </h1>
+<h2>frontend Html</h2>
+<img src="__IMAGES__/test.png" alt="">
 </body>
 </html>
