--- a/application/backend/view/common/header.html
+++ b/application/backend/view/common/header.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{$title}</title>
 </head>
 <body>
-<h2>Hello Html</h2>
-</body>
-</html>
