--- a/application/ffmpeg/view/index/viewmain.html
+++ b/application/ffmpeg/view/index/viewmain.html
@@ -5,8 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<h1><a href = "{:url('ffmpeg/Index/videoCut')}" > {$video_cut}</a></h1>
-<h1><a href = "{:url('ffmpeg/Index/videoConcat')}" > {$video_concat } </a></h1>
+<div style="position: relative;margin-right: auto;margin-left: auto; width: 100%;">
+    <h1><a href = "{:url('ffmpeg/Index/initVideoTableEdit')}" > {$init_video}</a></h1>
+    <h1><a href = "{:url('ffmpeg/Index/videoCut')}" > {$video_cut } </a></h1>
+    <h1><a href = "{:url('ffmpeg/Index/videoConcat')}" > {$video_concat } </a></h1>
+</div>
 
 </body>
 </html>
