--- a/application/backend/view/layout.html
+++ b/application/backend/view/layout.html
@@ -89,4 +89,4 @@
         </div><!-- /#ace-settings-container -->
     </div><!-- /.main-container-inner -->
 </div>
-{include file="common/footer"}
+{include file="common/footer"/}
