--- a/application/backend/view/common/head.html
+++ b/application/backend/view/common/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8" />
     <title>{$Think.config.app_title}</title>
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- basic styles -->
-　　<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-　　<link rel="shortcut icon" href="__STATIC__/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="__STATIC__/favicon.ico" mce_href="__STATIC__/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="__STATIC__/favicon.ico" mce_href="__STATIC__/favicon.ico" type="image/x-icon">
 
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="__CSS__/font-awesome.min.css" />
