--- a/application/backend/view/common/sidebar.html
+++ b/application/backend/view/common/sidebar.html
@@ -41,10 +41,11 @@
             </a>
         </li>
 
+
         <li>
             <a href="#" class="dropdown-toggle">
                 <i class="icon-cog"></i>
-                <span class="menu-text"> 系统管理 </span>
+                <span class="menu-text"> 系统配置 </span>
 
                 <b class="arrow icon-angle-down"></b>
             </a>
@@ -65,6 +66,7 @@
                 </li>
             </ul>
         </li>
+
 
         <li>
             <a href="{:url('backend/category/index')}">
